--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @import url(./vendor/normalize.css);
 /* Шрифт Inter*/
 @import url(./vendor/fonts/inter-web/inter.css);
+
+.page {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
+  background-color:#000;
+  color: #fff;
+}
