--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,3 +18,9 @@
     padding-right: 14px;
   }
 }
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
