--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,26 +1,493 @@
 .content {
+
   max-width: 1280px;
   min-height: 674px;
   margin: 0 auto;
+}
+
+.header {
+  max-width: 100%;
+  min-height: 74px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
   padding-left: 70px;
   padding-right: 70px;
 }
-@media (min-width: 768px) {
-  .content {
+
+@media (max-width: 320px) {
+  .header {
+    margin-bottom: 20px;
     padding-left: 30px;
     padding-right: 30px;
   }
 }
 
-@media (min-width: 320px) {
-  .content {
+@media (max-width: 650px) {
+  .header {
+    margin-bottom: 14px;
     padding-left: 14px;
     padding-right: 14px;
   }
 }
-.header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+
+.header__auth {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
+
+@media (max-width: 320px) {
+  .header__auth {
+    gap: 14px;
+    padding: 0;
+  }
+}
+
+.header__reg {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.header__signin {
+  width: 76px;
+  height: 32px;
+  background-color: #3DDC84;
+  color: black;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000;
+  border-radius: 2px;
+}
+
+.header__signup {
+  text-decoration: none;
+}
+
+.hromo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% - 80px);
+  min-height: 493px;
+  background-color: #272727;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .hromo {
+    width: calc(100% - 40px);
+  }
+}
+
+@media (max-width: 320px) {
+  .hromo {
+    width: calc(100% - 28px);
+
+  }
+}
+
+.hromo__title {
+  max-width: 730px;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 58px;
+  margin-top: 160px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .hromo__title {
+    width: calc(100% - 48px);
+    font-size: 40px;
+    line-height: 52px;
+  }
+}
+
+@media (max-width: 670px) {
+  .hromo__title {
+    font-size: 33px;
+    line-height: 45px;
+  }
+}
+
+@media (max-width: 520px) {
+  .hromo__title {
+    width: calc(100% - 28px);
+    font-size: 29px;
+    line-height: 37px;
+    letter-spacing: -0.04em;
+  }
+}
+
+.hromo__navtab {
+  width: 100%;
+  min-height: 36px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 320px) {
+  .hromo__navtab {
+    width: calc(100% - 34px);
+    gap: 8px;
+  }
+}
+
+.hromo__botton {
+  width: 96px;
+  min-height: 36px;
+  gap: 10px;
+  background: #303030;
+  border-radius: 10px;
+  margin-top: 151px;
+  margin-bottom: 30px;
+}
+
+.hromo__navtext {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+}
+
+@media (max-width: 320px) {
+  .hromo__navtext {
+    font-size: 10px;
+  }
+}
+
+.aboutproject {
+  width: calc(100% - 140px);
+  margin: 0 auto;
+  min-height: 585px;
+}
+
+@media (max-width: 620px) {
+  .aboutproject {
+    width: calc(100% - 36px);
+  }
+}
+
+.aboutproject__title {
+  margin-top: 110px;
+  margin-bottom: 23px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 27px;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
+}
+
+@media (max-width: 320px) {
+  .aboutproject__title {
+    margin-top: 70px;
+  }
+}
+
+.aboutproject__line {
+  height: 1px;
+  margin-bottom: 50px;
+  background-color: #DADADA;
+}
+
+@media (max-width: 520px) {
+  .aboutproject__line {
+    width: calc(100% - 36px);
+    margin-bottom: 40px;
+  }
+}
+
+.aboutproject__info {
+  display: grid;
+  grid-template-columns: 460fr 484fr;
+  grid-template-rows: repeat(2, minmax(28px, max-content));
+  grid-template-areas:
+    "title-stage title-term"
+    "text-stage text-term";
+  column-gap: 40px;
+}
+
+@media (max-width: 650px) {
+  .aboutproject__info {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+      "title-stage"
+      "text-stage"
+      "title-term"
+      "text-term";
+    column-gap: 50px;
+  }
+}
+
+
+.aboutproject__info-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: -0.04em;
+  margin-bottom: 14px;
+}
+
+.aboutproject__info-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 14px;
+}
+
+.aboutproject_info-title_stage {
+  grid-area: title-stage;
+}
+
+.aboutproject_info-title_term {
+  grid-area: title-term;
+}
+
+.aboutproject_info-text_stage {
+  grid-area: text-stage;
+  margin-bottom: 36px;
+}
+
+.aboutproject_info-text_term {
+  grid-area: text-term;
+}
+
+.aboutproject__scale {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 110px;
+  margin-bottom: 90px;
+}
+
+@media (max-width: 768px) {
+  .aboutproject__scale {
+    margin-top: 93px;
+    margin-bottom: 93px;
+  }
+}
+
+@media (max-width: 320px) {
+  .aboutproject__scale {
+    margin-top: 70px;
+    margin-bottom: 70px;
+  }
+}
+
+.aboutproject__scale-back {
+  width: 225px;
+  text-align: center;
+}
+
+.aboutproject__scale-front {
+  width: 912px;
+  text-align: center;
+}
+
+.aboutproject__scale-one {
+  max-width: 225px;
+  min-height: 38px;
+  background-color: #3DDC84;
+  color: #000000;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+@media (max-width: 520px) {
+  .aboutproject__scale-one {
+    width: 100px;
+  }
+}
+
+.aboutproject__scale-four {
+  max-width: 912px;
+  min-height: 38px;
+  background-color: #303030;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+@media (max-width: 320px) {
+  .aboutproject__scale-four {
+    max-width: 184px;
+  }
+}
+
+.aboutproject__scale-subtitle {
+  color: #A0A0A0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+}
+
+.aboutproject__scale-paragraph {
+  margin: 0;
+  padding-top: 10px;
+}
+
+.techs {
+  background-color: #272727;
+  width: 100%;
+}
+
+.techs__title {
+  width: calc(100% - 140px);
+  margin: 0 auto;
+  padding-top: 100px;
+  margin-bottom: 23px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 27px;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
+}
+
+@media (max-width: 550px) {
+  .techs__title {
+    width: calc(100% - 36px);
+    margin: 0 auto;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
+}
+
+.techs__line {
+  width: calc(100% - 140px);
+  margin: 0 auto;
+  height: 1px;
+  margin-bottom: 50px;
+  background-color: #DADADA;
+}
+
+@media (max-width: 550px) {
+  .techs__line {
+    width: calc(100% - 28px);
+    margin-bottom: 40px;
+  }
+}
+
+.techs__header {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 58px;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
+  margin-top: 90px;
+}
+
+@media (max-width: 550px) {
+  .techs__header {
+    width: calc(100% - 28px);
+    margin: 0 auto;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 24px;
+  }
+}
+
+.techs__subtitle {
+  width: calc(100% - 820px);
+  margin: 0 auto;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
+}
+
+@media (max-width: 1100px) {
+  .techs__subtitle {
+    width: calc(100% - 308px);
+    margin-bottom: 22px;
+  }
+}
+
+@media (max-width: 550px) {
+  .techs__subtitle {
+    width: calc(100% - 28px);
+    margin-bottom: 22px;
+  }
+}
+
+.techs__blocks {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  padding-bottom: 100px;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+
+
+@media (max-width: 600px) {
+  .techs__blocks {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+@media (max-width: 320px) {
+  .techs__blocks {
+    justify-content: start;
+  }
+}
+
+.techs__block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 60px;
+  border-radius: 10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.04em;
+  background-color: #303030;
+  margin-bottom: 90px;
+}
+.aboutme__photo {
+  width: 100px;
+  height: 100px;
+}
+
