--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,14 @@
 .header {
-  max-width: 100%;
+  max-width: 1280px;
   min-height: 74px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
   padding-left: 70px;
   padding-right: 70px;
+  background: #202020;
+
 }
 
 @media (max-width: 320px) {
