--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,12 +8,10 @@
   padding-left: 70px;
   padding-right: 70px;
   background: #202020;
-
 }
 
-@media (max-width: 320px) {
+@media (max-width: 820px) {
   .header {
-    margin-bottom: 20px;
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -21,7 +19,6 @@
 
 @media (max-width: 650px) {
   .header {
-    margin-bottom: 14px;
     padding-left: 14px;
     padding-right: 14px;
   }
@@ -69,4 +66,73 @@
 
 .header__signup {
   text-decoration: none;
+}
+
+.header__films {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .header__films {
+    display: none;
+  }
+}
+
+.header__film {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  text-decoration: none;
+  margin-right: 16px;
+}
+
+.header__saved-films {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  text-decoration: none;
+
+}
+
+.header__in {
+  display: flex;
+  flex-direction: row;
+  gap: 17px;
+  margin-left: -3%;
+}
+
+@media (max-width: 768px) {
+  .header__in {
+    display: none;
+  }
+}
+
+.header__acc {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.header__menu-button {
+  width: 44px;
+  height: 44px;
+  background-color: #202020;
+  border: none;
+  display: none;
+}
+
+
+@media (max-width: 768px) {
+  .header__menu-button {
+    display: block;
+
+  }
 }
