--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
   font-family: 'Inter', Helvetica, Arial, sans-serif;
-  background-color:#000;
+  background: #202020;
   color: #fff;
+  
 }
