--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,54 +1,88 @@
- /* .preloader {
-  position: absolute;
-  top: 10%;
-  left: 40%;
-  width: 150px;
-  height: 150px;
-  border: 2px solid #eae4ea;
-  box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-  border-bottom: 2px solid #6ddfca;
-  border-radius: 50%;
-  animation: loader 3s linear infinite;
-  margin: 0 auto;
-}
-
-.loader:before {
-  content: '';
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  bottom: 10px;
-  right: 10px;
-  border: 2px solid #eae4ea;
-  box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-  border-bottom: 2px solid #d355be;
-  border-radius: 50%;
-  animation: loader 2s linear infinite;
-}
-
-.loader:after {
-  content: '';
-  position: absolute;
-  top: 22px;
-  left: 22px;
-  bottom: 22px;
-  right: 22px;
-  border: 2px solid #eae4ea;
-  box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-  border-bottom: 2px solid #8c23ec;
-  border-radius: 50%;
-  animation: loader 1s linear infinite;
-}
-
-@keyframes loader
-{
-  0%
-  {
-    transform: rotate(0deg);
+@keyframes preloader-inside-white {
+  0% {
+      -webkit-transform: scale(0, 0);
+      -moz-transform: scale(0, 0);
+      -ms-transform: scale(0, 0);
+      -o-transform: scale(0, 0);
+      transform: scale(0, 0);
   }
-  100%
-  {
-    transform: rotate(360deg);
+  100% {
+      -webkit-transform: scale(1, 1);
+      -moz-transform: scale(1, 1);
+      -ms-transform: scale(1, 1);
+      -o-transform: scale(1, 1);
+      transform: scale(1, 1);
   }
-  
-}  */
+}
+
+@keyframes preloader-inside-red {
+  0% {
+      -webkit-transform: scale(0, 0);
+      -moz-transform: scale(0, 0);
+      -ms-transform: scale(0, 0);
+      -o-transform: scale(0, 0);
+      transform: scale(0, 0);
+  }
+  30% {
+      -webkit-transform: scale(0, 0);
+      -moz-transform: scale(0, 0);
+      -ms-transform: scale(0, 0);
+      -o-transform: scale(0, 0);
+      transform: scale(0, 0);
+  }
+  100% {
+      -webkit-transform: scale(1, 1);
+      -moz-transform: scale(1, 1);
+      -ms-transform: scale(1, 1);
+      -o-transform: scale(1, 1);
+      transform: scale(1, 1);
+  }
+}
+
+.preloader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  padding: 20px;
+}
+
+.preloader__container {
+  width: 100px;
+  height: 100px;
+  position: relative;
+}
+
+.preloader__round {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #3DDC84;
+  border-radius: 50px;
+}
+
+.preloader__round::after,
+.preloader__round::before {
+  content: '';
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50px;
+}
+
+.preloader__round::after {
+  background: white;
+  animation: preloader-inside-white 1s ease-in-out infinite;
+}
+
+.preloader__round::before {
+  z-index: 10;
+  background: #3DDC84;
+  animation: preloader-inside-red 1s ease-in-out infinite;
+}
