--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -95,7 +95,11 @@
   color: #FFFFFF;
   margin-right: 20px;
 }
-
+.footer__praktikum-link:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
 @media (max-width: 500px) {
   .footer__praktikum-link {
     margin-right: 0;
@@ -113,6 +117,12 @@
   line-height: 16px;
   text-align: right;
   color: #FFFFFF;
+}
+
+.footer__github-link:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
 }
 
 @media (max-width: 500px) {
