--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,6 +48,12 @@
   line-height: 16px;
 }
 
+.header__reg:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
 .header__signin {
   width: 76px;
   height: 32px;
@@ -64,8 +70,15 @@
   border-radius: 2px;
 }
 
-.header__signup {
+.header__signin:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
+.header__enter {
   text-decoration: none;
+  color: #000000;
 }
 
 .header__films {
@@ -89,6 +102,12 @@
   margin-right: 16px;
 }
 
+.header__film:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
 .header__saved-films {
   font-style: normal;
   font-weight: 500;
@@ -96,7 +115,12 @@
   line-height: 18px;
   color: #FFFFFF;
   text-decoration: none;
+}
 
+.header__saved-films:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
 }
 
 .header__in {
@@ -121,6 +145,12 @@
   color: #FFFFFF;
 }
 
+.header__acc:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
 .header__menu-button {
   width: 44px;
   height: 44px;
@@ -129,6 +159,11 @@
   display: none;
 }
 
+.header__menu-button:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
 
 @media (max-width: 768px) {
   .header__menu-button {
