--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -33,6 +33,12 @@
   text-decoration: none;
 }
 
+.portfolio__link:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
 .portfolio__line {
   width: 100%;
   height: 1px;
@@ -52,6 +58,7 @@
   letter-spacing: -0.04em;
   color: #FFFFFF;
 }
+
 @media (max-width: 500px) {
   .portfolio__arrow {
     font-size: 18px;
