--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -39,71 +39,91 @@
   border: none;
   margin-bottom: 15px;
 }
- @media (max-width: 1200px) {
+
+.moviescard__favorite:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
+@media (max-width: 1200px) {
   .moviescard__favorite {
     margin-left: 70px
   }
 }
- @media (max-width: 1150px) {
+
+@media (max-width: 1150px) {
   .moviescard__favorite {
     margin-left: 50px
   }
 }
+
 @media (max-width: 1080px) {
   .moviescard__favorite {
     margin-left: 50px
   }
 }
+
 @media (max-width: 1000px) {
   .moviescard__favorite {
     margin-left: 100px
   }
 }
+
 @media (max-width: 860px) {
   .moviescard__favorite {
     margin-left: 80px
   }
 }
+
 @media (max-width: 790px) {
   .moviescard__favorite {
     margin-left: 60px
   }
 }
+
 @media (max-width: 730px) {
   .moviescard__favorite {
     margin-left: 45px
   }
 }
+
 @media (max-width: 655px) {
   .moviescard__favorite {
     margin-left: 40px
   }
 }
+
 @media (max-width: 651px) {
   .moviescard__favorite {
     margin-left: 250px
   }
 }
+
 @media (max-width: 540px) {
   .moviescard__favorite {
     margin-left: 180px
   }
 }
+
 @media (max-width: 495px) {
   .moviescard__favorite {
     margin-left: 120px
   }
 }
+
 @media (max-width: 435px) {
   .moviescard__favorite {
     margin-left: 70px
-  } 
+  }
 }
+
 @media (max-width: 380px) {
   .moviescard__favorite {
     margin-left: 30px
-  }  
+  }
 }
+
 .moviescard__delete-favorite {
   width: 30px;
   height: 30px;
@@ -112,6 +132,13 @@
   border: none;
   margin-bottom: 15px;
 }
+
+.moviescard__delete-favorite:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+
 .moviescard__poster {
   width: 100%;
   height: 203px;
@@ -119,8 +146,22 @@
   object-fit: cover;
   grid-column: 1 / 4;
 }
- @media (max-width: 651px) {
+
+@media (max-width: 651px) {
   .moviescard__poster {
     height: 100%;
-  }  
-} 
+  }
+}
+
+.moviescard__favorite_active {
+  background: #3DDC84;
+  border: none;
+}
+
+.moviescard__favorite_active svg {
+  fill: #FFFFFF;
+}
+
+.moviescard__favorite_active svg path {
+  stroke: #FFFFFF;
+}
