--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -128,5 +128,14 @@
   line-height: 17px;
   letter-spacing: -0.04em;
   background-color: #303030;
+}
 
+.techs__block:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 1s;
+}
+.techs__link {
+  text-decoration: none;
+  color:#FFFFFF;
 }
