--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -43,7 +43,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: calc(100% -140px);
+  margin: 0 auto;
   height: 100%;
   z-index: 10;
   padding: 20px;
