--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -26,7 +26,7 @@
   }
 }
 
-.movieslist__button {
+/* .movieslist__button {
   min-height: 36px;
   width: calc(100% - 140px);
   margin: 0 auto;
@@ -49,7 +49,7 @@
   cursor: pointer;
   opacity: 0.5;
   transition: 1s;
-}
+} */
 
 @media (max-width: 900px) {
   .movieslist__button {
