--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -105,6 +105,11 @@
   opacity: 0.5;
   transition: 1s;
 }
+ .profile__edit-button:disabled {
+  color: gray;
+  opacity: 1;
+ 
+} 
 .profile__exit-button {
   font-style: normal;
   font-weight: 500;
@@ -118,4 +123,14 @@
   cursor: pointer;
   opacity: 0.5;
   transition: 1s;
+}
+
+.profile__error {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #EE3465;
+  margin-top: 10px;
+  margin-left: auto;
 }
