--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -72,9 +72,9 @@
   box-sizing: border-box;
 }
 
-.auth__input_error {
+/* .auth__input_error {
   color: #EE3465;
-}
+} */
 
 .auth__error {
   font-style: normal;
@@ -104,6 +104,10 @@
   cursor: pointer;
   opacity: 0.5;
   transition: 1s;
+}
+.auth__submit-button:disabled {
+  background-color: gray;
+  opacity: 1;
 }
 
 @media (max-width: 450px) {
